# rag-pipeline

./: RAG.ipynb  docker-compose.yaml  main.py  pyproject.toml
sql/: init.sql
utils/: __init__.py  arxiv.py  sql.py
