[project]
name = "rag-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.2.0",
    "docling>=2.31.0",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "langchain-ollama>=0.3.2",
    "pip>=25.0.1",
    "psycopg2-binary>=2.9.10",
    "pymupdf>=1.25.5",
]

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "W", "A", "PLC", "PLE", "PLR", "PLW", "I", "ERA"]
