[project]
name = "rag-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.2.0",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "langchain>=0.3.24",
    "langchain-community>=0.3.21",
    "langchain-ollama>=0.3.2",
    "langchain-postgres>=0.0.14",
    "pip>=25.0.1",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary,pool]>=3.2.6",
    "pypdf>=5.4.0",
]

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "W", "A", "PLC", "PLE", "PLR", "PLW", "I", "ERA"]
